--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h2>Dear Maam Dubria,</h2>
 
       
-      <img src="/1759484502571.jpg" class="teacher-img">
+      <img src="1759486281354.jpg" class="teacher-img">
 
       <p>
         Happy Teachers’ Day! 🎉  
