--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <p>Click to open your special message!</p>
     </div>
     <div class="card-back">
-      <h2>Dear Maam Dubria,</h2>
+      <h2>Dear Sir Dua,</h2>
 
       
       <img src="1759486281354.jpg" class="teacher-img">
@@ -23,7 +23,7 @@
         Thank you for your hard work and kindness in teaching us.  
         I’m truly grateful for all your support and guidance.  
         Wishing you good health and happiness always.  
-        God bless you, Ma'am!
+        God bless you, Sir!
       </p>
       <p class="signature">— From Kharl, BSIS</p>
     </div>
